--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
   <header>
     <nav>
       <div class="logo">Manoj V</div>
-      <ul>
+      <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <ul id="navList">
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
